ec2-lab_serverless.yml
service: ec2-lab

frameworkVersion: ">=1.27.2 <2.0.0"

custom:
  stage: ${opt:stage, self:provider.stage}
  defaultStage: dev

provider:
  name: aws
  region: us-east-1
  runtime: nodejs6.10

functions:

resources:
  Resources:
    Role:
      Type: AWS::IAM::Role
      Properties:
        RoleName: "S3-Admin-Access"
        AssumeRolePolicyDocument:
          Version: "2012-10-17"
          Statement:
            - Effect: "Allow"
              Principal:
                Service:
                  - "ec2.amazonaws.com"
              Action:
                - "sts:AssumeRole"
    Policy:
      Type: AWS::IAM::Policy
      Properties:
        PolicyName: "S3-Full-Access"
        PolicyDocument:
          Version: "2012-10-17"
          Statement:
            - Effect: "Allow"
              Action: "*"
              Resource: "arn:aws:s3:::*"
        Roles:
          - Ref: "Role"
    InstanceProfile:
      Type: AWS::IAM::InstanceProfile
      Properties:
        Roles:
          - Ref: "Role"
    InstanceSecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupName: "Ec2DMZ"
        GroupDescription: "SSH HTTP HTTPS for DMZ"
        SecurityGroupIngress:
          - IpProtocol: "tcp"
            FromPort: 22
            ToPort: 22
            CidrIp: "0.0.0.0/0"
          - IpProtocol: "tcp"
            FromPort: 80
            ToPort: 80
            CidrIp: "0.0.0.0/0"
          - IpProtocol: "tcp"
            FromPort: 443
            ToPort: 443
            CidrIp: "0.0.0.0/0"
    Ec2Instance:
      Type: AWS::EC2::Instance
      Properties:
        ImageId: "ami-0080e4c5bc078760e" #Amazon Linux AMI HVM
        InstanceType: "t2.micro"
        KeyName: "MyEc2-Lab-Key" #setup key pair before deploy
        IamInstanceProfile: { "Ref": "InstanceProfile" }
        SecurityGroups:
          - Ref: "InstanceSecurityGroup" #!GetAtt InstanceSecurityGroup.GroupName (i think)
        BlockDeviceMappings:
          - DeviceName: "/dev/xvda"
            Ebs:
              VolumeType: "standard"
              DeleteOnTermination: "true"
              VolumeSize: "8"
        Tags:
          - Key: "Name"
            Value: "Ec2-Lab"
        UserData: ${file(scripts/startup.sh.base64)}
